kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
  labels:
    app: test-app
spec:
  selector:
    app: test-app
  ports:
  - name: proxy
    port: 443
    targetPort: 8443
  type: ClusterIP
