kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test-app-route
  labels:
    app: test-app
spec:
  to:
    kind: Service
    name: test-app
  port:
    targetPort: 8443
  tls:
    termination: Reencrypt
